# Template_CoMFA

./: .gitignore  LICENSE.md  README.md
comfa/: CMakeLists.txt  comfa.cpp  ghc.cpp  pls.cpp  readme.txt  sampls.cpp
data/: comfa_in.sdf  ele.oesrf  model.tcfa  readme.txt  ste.oesrf  tcfa_in.sdf  tmpl.sdf
tcfa/: CMakeLists.txt  plane.cpp  readme.txt  tcfa.cpp  top.cpp
